targets/sol/k3s/mosquitto/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-homeassistant-services-ingress
  namespace: apps-privileged
spec:
  podSelector:
    matchLabels:
      app: mosquitto
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: homeassistant
      ports:
        - port: 1883
        - port: 8883
        - port: 9001
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mosquitto-lan-egress
  namespace: apps-privileged
spec:
  podSelector:
    matchLabels:
      app: mosquitto
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
        - ipBlock:
            cidr: 192.168.0.0/16
  policyTypes:
    - Egress
